Fixes css layout issue introduced with box-sizing

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ h4 {
   font-size: 1.2rem;
   padding: 10px 20px;
   width: 300px;
-  height: 40px;
+  height: 60px;
   border: none;
   border-radius: 8px;
 }
